<resources>
    <string name="app_name">BooleanLogicGame</string>
    <string name="playButton">Play</string>
    <string name="submitAnswer">Submit</string>
    <string name="Timer">Time Left</string>
    <string name="Score">Score:</string>
    <string name="Question"><![CDATA[1 & Blue]]></string>
    <string name="pQuestion1">3</string>
    <string name="pQuestion2">Blue</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>

    <string name="_blue">Blue</string>
    <string name="_red">Red</string>
    <string name="_yellow">Yellow</string>
    <string name="_hint">Discover Hidden Features by Trying Different Gestures</string>
    <string name="boologic">Boologic</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="play">Play</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="quit">Quit</string>
    <string name="a_simple_math_logic_game">A Simple Math Logic Game</string>
    <string name="reset">Reset</string>
</resources>
