<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Question"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/colorNumber"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_weight="1"
            android:text="Score: 0"/>

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:10"
            android:textSize="40sp"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        android:gravity="center_horizontal">

        <CheckBox
            android:text="@string/_1"
            android:textSize="50sp"
            android:id="@+id/game_button1"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark"
            style="?android:attr/buttonBarButtonStyle" />

        <CheckBox
            android:text="@string/_2"
            android:textSize="50sp"
            android:id="@+id/game_button2"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="5dp"
            android:background="@color/ourYellowTile"
            style="?android:attr/buttonBarButtonStyle" />

        <CheckBox
            android:text="@string/_3"
            android:textSize="50sp"
            android:id="@+id/game_button3"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="5dp"
            android:background="@color/ourRedTile"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginVertical="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:gravity="center_horizontal"
        tools:targetApi="o">


        <CheckBox
            android:text="@string/_3"
            android:textSize="50sp"
            android:id="@+id/game_button4"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:background="@color/ourBlueTile"
            style="?android:attr/buttonBarButtonStyle" />

        <CheckBox
            android:text="@string/_3"
            android:textSize="50sp"
            android:id="@+id/game_button5"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="26dp"
            android:background="@color/ourYellowTile"
            style="?android:attr/buttonBarButtonStyle" />

        <CheckBox
            android:text="@string/_1"
            android:textSize="50sp"
            android:id="@+id/game_button6"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="26dp"
            android:background="@color/ourRedTile"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginVertical="145dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:gravity="center_horizontal"
        tools:targetApi="o">

        <CheckBox
            android:text="@string/_2"
            android:textSize="50sp"
            android:id="@+id/game_button7"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:background="@color/ourBlueTile"
            style="?android:attr/buttonBarButtonStyle" />

        <CheckBox
            android:text="@string/_1"
            android:textSize="50sp"
            android:id="@+id/game_button8"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="26dp"
            android:background="@color/ourYellowTile"
            style="?android:attr/buttonBarButtonStyle" />

        <CheckBox
            android:text="@string/_2"
            android:textSize="50sp"
            android:id="@+id/game_button9"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="26dp"
            android:background="@color/ourRedTile"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/submit_answer"
            android:background="#ac9e6d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submitAnswer"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="457dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>